feat: add graph component

--- a/covid-dashboard/src/components/MainComponent/RightSideComponent/RightSideComponent.css
+++ b/covid-dashboard/src/components/MainComponent/RightSideComponent/RightSideComponent.css
@@ -3,5 +3,6 @@
     flex-direction: column;
     width: 20%;
     height: 73vh;
-    background-color: green;
+    /* background-color: green; */
+    background-color: #222222;
 }
