--- a/covid-dashboard/src/components/FooterComponent/FooterComponent.css
+++ b/covid-dashboard/src/components/FooterComponent/FooterComponent.css
@@ -3,7 +3,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    width: 100%;
-    height: 80px;
+    width: 99%;
+    margin: 0 auto;
+    height: 90px;
+    padding: 5px;
     background-color: #222222;
+    margin-top: 0.5%;
 }
