--- a/covid-dashboard/src/components/HeaderComponent/HeaderComponent.css
+++ b/covid-dashboard/src/components/HeaderComponent/HeaderComponent.css
@@ -1,7 +1,9 @@
 .header-wrapper {
     height: 80px;
     background-color: #222222;
-    width: 100%;
+    width: 99%;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
+    margin-bottom: 0.5%;
 }
