--- a/covid-dashboard/src/components/MainComponent/LeftSideComponent/GlobalCasesComponent/GlobalCasesComponent.css
+++ b/covid-dashboard/src/components/MainComponent/LeftSideComponent/GlobalCasesComponent/GlobalCasesComponent.css
@@ -2,21 +2,11 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 25%;
+    height: 20%;
     justify-content: center;
     align-items: center;
     text-align: center;
     background-color: #222222;
-}
-
-.global-cases-wrapper h2 {
-    font-family: Arial, sans-serif;
-    font-size: 24px;
-    color: #bdbdbd;
-}
-
-.global-cases-wrapper span {
-    font-family: Arial, sans-serif;
-    font-size: 28px;
-    color: #e60000;
+    margin-bottom: 1%;
+    border-radius: 5px;
 }
