--- a/covid-dashboard/src/components/MainComponent/LeftSideComponent/ListComponent/ListComponent.css
+++ b/covid-dashboard/src/components/MainComponent/LeftSideComponent/ListComponent/ListComponent.css
@@ -1,47 +1,82 @@
 .list-wrapper {
     display: flex;
-    flex-direction: column;
     width: 100%;
-    height: 75%;
+    height: 79%;
     justify-content: center;
     align-items: center;
     text-align: center;
     flex-wrap: wrap;
     background-color: #222222;
+    border-radius: 5px;
 }
 
 .list-wrapper h2 {
-    width: 100%;
+    width: 72%;
     font-family: Arial, sans-serif;
     font-size: 14px;
     color: #bdbdbd;
+    margin-top: 3%;
 }
 
 .lists-wrapper {
     display: flex;
     width: 100%;
     flex-direction: column;
+    overflow: scroll;
+    overflow-x: hidden;
+    height: 85%;
+}
+
+.cases-wrapper {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    justify-content: flex-start;
+    border-bottom: 1px solid #5c5c5c;
 }
 
 .country-stat-wrapper {
-    display: flex;
-    width: 100%;
-    padding: 5px;
-}
-
-.country-stat-wrapper li {
-    width: 39%;
-    margin-right: 2%;
+    width: 30%;
     font-family: Arial, sans-serif;
-    font-size: 14px;
-    color: #bdbdbd;
-}
-
-.country-stat-wrapper li:first-child {
+    font-size: 14px !important;
     color: #e60000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.country-stat-wrapper li:last-child {
-    width: 10%;
-    background-color: tomato;
+.country-flag {
+    width: 15px;
+}
+
+.country-wrapper {
+    width: 55%;
+    font-family: Arial, sans-serif;
+    font-size: 14px !important;
+    color: #bdbdbd !important;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.country-flag-wrapper {
+    width: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+::-webkit-scrollbar {
+    height: 7px;
+    width: 7px;
+    background: #404040;
+}
+
+::-webkit-scrollbar-corner {
+    background: #404040;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #5c5c5c;
 }
