--- a/covid-dashboard/src/components/HeaderComponent/HeaderComponent.css
+++ b/covid-dashboard/src/components/HeaderComponent/HeaderComponent.css
@@ -1,9 +1,17 @@
 .header-wrapper {
-    height: 80px;
+    height: 120px;
     background-color: #222222;
     width: 99%;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
     margin-bottom: 0.5%;
+}
+
+.header-info-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
 }
