--- a/covid-dashboard/src/components/HeaderComponent/HeaderTitleComponent/HeaderTitleComponent.css
+++ b/covid-dashboard/src/components/HeaderComponent/HeaderTitleComponent/HeaderTitleComponent.css
@@ -1,10 +1,11 @@
 .header-title-wrapper {
-    width: 80%;
+    width: 100%;
+    height: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     color: #bdbdbd;
-    font-size: 28px;
+    font-size: 20px;
     font-family: Arial, sans-serif;
 }
