--- a/covid-dashboard/src/components/MainComponent/LeftSideComponent/GlobalCasesComponent/GlobalCasesStatComponent/GlobalCasesStatComponent.css
+++ b/covid-dashboard/src/components/MainComponent/LeftSideComponent/GlobalCasesComponent/GlobalCasesStatComponent/GlobalCasesStatComponent.css
@@ -1,11 +1,45 @@
-h2 {
+.global-case-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.global-case-wrapper h2 {
     font-family: Arial, sans-serif;
-    font-size: 24px;
+    font-size: 14px;
     color: #bdbdbd;
 }
 
-span {
+.stat-wrapper span {
+    display: inline-block;
+    width: 60%;
     font-family: Arial, sans-serif;
     font-size: 28px;
+    color: #e60000;
+}
+
+.stat-wrapper {
+    width: 100%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.stat-wrapper div {
+    width: 20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    font-size: 28px;
+    color: #bdbdbd;
+    padding-bottom: 8px;
+}
+
+.stat-wrapper div:hover {
+    cursor: pointer;
     color: #e60000;
 }
