--- a/covid-dashboard/src/components/MainComponent/MapComponent/MapComponent.css
+++ b/covid-dashboard/src/components/MainComponent/MapComponent/MapComponent.css
@@ -4,5 +4,5 @@
     justify-content: center;
     align-items: center;
     height: 73vh;
-    background-color: yellow;
+    /* background-color: yellow; */
 }
