--- a/covid-dashboard/src/components/MainComponent/LeftSideComponent/ListComponent/ListComponent.css
+++ b/covid-dashboard/src/components/MainComponent/LeftSideComponent/ListComponent/ListComponent.css
@@ -33,6 +33,17 @@
     flex-direction: row;
     justify-content: flex-start;
     border-bottom: 1px solid #5c5c5c;
+    cursor: pointer;
+    user-select: none;
+    transition: 0.5s;
+}
+
+.cases-wrapper:hover {
+    background: rgba(0,0,0,0.4);
+}
+
+.active-country {
+    background: black;
 }
 
 .country-stat-wrapper {
