feat:add responsive disign and full screen option

--- a/covid-dashboard/src/components/FooterComponent/LogoLinkComponent/LogoLinkComponent.css
+++ b/covid-dashboard/src/components/FooterComponent/LogoLinkComponent/LogoLinkComponent.css
@@ -5,6 +5,13 @@
     align-items: center;
 }
 
+.rss-logo-wrapper a {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
 svg {
-    width: 74.2%;
+    width: 30%;
 }
