--- a/covid-dashboard/src/components/HeaderComponent/HeaderComponent.css
+++ b/covid-dashboard/src/components/HeaderComponent/HeaderComponent.css
@@ -1,17 +1,35 @@
 .header-wrapper {
-    height: 120px;
+    height: 80px;
     background-color: #222222;
     width: 99%;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
     margin-bottom: 0.5%;
+    margin-top: 0.5%;
 }
 
 .header-info-wrapper {
     display: flex;
     flex-direction: column;
-    width: 80%;
+    width: 90%;
     justify-content: center;
     align-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+    .header-wrapper {
+        height: 120px;
+    }  
+
+    .header-info-wrapper {
+        width: 95%;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .header-wrapper {
+        height: 150px;
+        width: 100%;
+    } 
 }
