--- a/covid-dashboard/src/components/HeaderComponent/HeaderTitleComponent/HeaderTitleComponent.css
+++ b/covid-dashboard/src/components/HeaderComponent/HeaderTitleComponent/HeaderTitleComponent.css
@@ -1,7 +1,7 @@
 .header-title-wrapper {
     width: 100%;
-    height: 50%;
     display: flex;
+    margin-bottom: 10px;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -9,3 +9,18 @@
     font-size: 20px;
     font-family: Arial, sans-serif;
 }
+
+@media screen and (max-width: 1024px) {
+    .header-title-wrapper {
+        margin-bottom: 5px;
+        font-size: 18px;
+    } 
+}
+
+@media screen and (max-width: 650px) {
+    .header-title-wrapper {
+        margin-bottom: 5px;
+        font-size: 14px;
+    } 
+}
+
