--- a/covid-dashboard/src/components/HeaderComponent/StatListComponent/StatListComponent.css
+++ b/covid-dashboard/src/components/HeaderComponent/StatListComponent/StatListComponent.css
@@ -17,10 +17,28 @@
     flex-wrap: wrap;
     justify-content: flex-start;
     align-items: center;
-    width: 23%;
-    margin-right: 2%;
+    width: 16.5%;
     margin-bottom: 2px;
 }
+
+@media screen and (max-width: 1024px) {
+    .btn-wrapper {
+        width: 24.5%;
+    } 
+}
+
+@media screen and (max-width: 870px) {
+    .btn-wrapper {
+        width: 33%;
+    } 
+}
+
+@media screen and (max-width: 650px) {
+    .btn-wrapper {
+        width: 50%;
+    } 
+}
+
 .btn-wrapper input {
     margin-right: 3px;
     width: 10%;
@@ -30,4 +48,10 @@
     font-size: 12px;
     color: #bdbdbd;
     font-family: Arial, sans-serif;
+}
+
+@media screen and (max-width: 950px) {
+    .btn-wrapper span {
+        font-size: 11px;
+    } 
 }
