--- a/covid-dashboard/src/components/MainComponent/LeftSideComponent/GlobalCasesComponent/GlobalCasesStatComponent/GlobalCasesStatComponent.css
+++ b/covid-dashboard/src/components/MainComponent/LeftSideComponent/GlobalCasesComponent/GlobalCasesStatComponent/GlobalCasesStatComponent.css
@@ -13,12 +13,42 @@
     color: #bdbdbd;
 }
 
+@media screen and (max-width: 740px) {
+    .global-case-wrapper h2 {
+        font-size: 12px;
+    } 
+}
+
 .stat-wrapper span {
     display: inline-block;
     width: 60%;
     font-family: Arial, sans-serif;
     font-size: 28px;
     color: #e60000;
+}
+
+@media screen and (max-width: 1024px) {
+    .stat-wrapper span {
+        font-size: 22px;
+    } 
+}
+
+@media screen and (max-width: 740px) {
+    .stat-wrapper span {
+        font-size: 18px;
+    } 
+}
+
+@media screen and (max-width: 600px) {
+    .stat-wrapper span {
+        font-size: 16px;
+    } 
+}
+
+@media screen and (max-width: 560px) {
+    .stat-wrapper span {
+        font-size: 14px;
+    } 
 }
 
 .stat-wrapper {
