--- a/covid-dashboard/src/components/MainComponent/LeftSideComponent/ListComponent/SearchPanelComponent/SearchPanelComponent.css
+++ b/covid-dashboard/src/components/MainComponent/LeftSideComponent/ListComponent/SearchPanelComponent/SearchPanelComponent.css
@@ -10,6 +10,19 @@
     outline: none;
 }
 
+@media screen and (max-width: 910px) {
+    .search-input {
+        padding-left: 0px;
+    } 
+}
+
+@media screen and (max-width: 600px) {
+    .search-input {
+        font-size: 8px;
+    } 
+}
+
+
 input::-webkit-input-placeholder {
     opacity: 1;
     transition: opacity 0.3s ease;
