--- a/covid-dashboard/src/components/MainComponent/MainComponent.css
+++ b/covid-dashboard/src/components/MainComponent/MainComponent.css
@@ -1,5 +1,7 @@
 .main-wrapper {
-    width: 100%;
+    width: 99%;
+    margin: 0 auto;
+    margin-bottom: 0.5%;
     display: flex;
     justify-content: center;
     align-items: center;
