--- a/covid-dashboard/src/components/MainComponent/RightSideComponent/RightSideComponent.css
+++ b/covid-dashboard/src/components/MainComponent/RightSideComponent/RightSideComponent.css
@@ -3,6 +3,10 @@
     flex-direction: column;
     width: 25%;
     height: 73vh;
-    /* background-color: green; */
-    background-color: #222222;
+}
+
+@media screen and (max-width: 1024px) {
+    .right-side-component-wrapper {
+        height: 67vh;
+    } 
 }
