--- a/covid-dashboard/src/components/HeaderComponent/StatListComponent/StatListComponent.css
+++ b/covid-dashboard/src/components/HeaderComponent/StatListComponent/StatListComponent.css
@@ -3,55 +3,46 @@
     width: 100%;
     justify-content: center;
     align-items: center;
-}
-
-.header-form-btns-wrapper {
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-
-.btn-wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: center;
-    width: 16.5%;
-    margin-bottom: 2px;
-}
-
-@media screen and (max-width: 1024px) {
-    .btn-wrapper {
-        width: 24.5%;
-    } 
-}
-
-@media screen and (max-width: 870px) {
-    .btn-wrapper {
-        width: 33%;
-    } 
-}
-
-@media screen and (max-width: 650px) {
-    .btn-wrapper {
-        width: 50%;
-    } 
-}
-
-.btn-wrapper input {
-    margin-right: 3px;
-    width: 10%;
-}
-
-.btn-wrapper span {
-    font-size: 12px;
     color: #bdbdbd;
     font-family: Arial, sans-serif;
 }
 
-@media screen and (max-width: 950px) {
-    .btn-wrapper span {
-        font-size: 11px;
-    } 
+.header-form-btns-wrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: -8%;
+}
+
+.btn-wrapper {
+    display: flex;
+    width: 120px;
+    align-items: center;
+    margin-bottom: 2px;
+}
+
+.btn-wrapper input {
+    margin-right: 3px;
+    width: 22px;
+}
+
+.btn-wrapper span {
+    font-size: 12px;
+}
+
+.wrapper-metric,
+.wrapper-period,
+.wrapper-count {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 150px;
+}
+
+@media screen and (max-width: 650px) {
+    .header-form-btns-wrapper {
+        margin-left: 0px;
+        margin-top: 12px;
+    }
+    
 }
