--- a/covid-dashboard/src/components/MainComponent/LeftSideComponent/ListComponent/ListComponent.css
+++ b/covid-dashboard/src/components/MainComponent/LeftSideComponent/ListComponent/ListComponent.css
@@ -48,7 +48,7 @@
     width: 100%;
     flex-direction: row;
     justify-content: flex-start;
-    border-bottom: 1px solid #5c5c5c;
+    border-bottom: 1px solid rgba(255,255,255,0.1);
     cursor: pointer;
     user-select: none;
     transition: 0.5s;
